--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.9.1
+crispy-bootstrap5==2025.6
 dj-database-url==3.0.1
 Django==5.2.6
 django-allauth==65.11.2
+django-crispy-forms==2.4
 gunicorn==23.0.0
 packaging==25.0
 psycopg2==2.9.10
